@@ -1,3 +1,8 @@
+2015-12-13  Natalia Portillo  <claunia@claunia.com>
+
+	* DiskType.cs:
+	  Corrected miswriting of CDXA, CDRW and CDROM.
+
 2015-12-06  Natalia Portillo  <claunia@claunia.com>
 
 	* DiskType.cs:
