@@ -1,3 +1,8 @@
+2015-12-13  Natalia Portillo  <claunia@claunia.com>
+
+	* CD/ATIP.cs:
+	  Added manufacturer code for a GCK disc I just came upon.
+
 2015-12-04  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Sense.cs:
